base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-demo2
spec:
  selector:
    matchLabels:
      app: rollouts-demo2
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"    
      labels:
        app: rollout-demo2
    spec:
      containers:
        - name: app
          image: argoproj/rollouts-demo:blue
  strategy:
    canary:
      trafficRouting:
        istio:
          virtualService:
            name: rollout-demo2-vsvc        # required
            routes:
            - primary                 # optional if there is a single route in VirtualService, required otherwise
          destinationRule:
            name: rollout-destrule-demo2    # required
            canarySubsetName: canary-demo2  # required
            stableSubsetName: stable-demo2  # required
      steps:
      - setWeight: 5
      - pause:
          duration: 10m
