base/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-demo2-rollout-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:  
        name: https
        number: 443
        protocol: HTTPS
      hosts:
        - "istio-demo2.local"       
      #tls:
      #  mode: SIMPLE
      #  credentialName: istio-example-credential-demo2
